修改了搜索客户的url

--- a/static/template/customer/customer_manage.html
+++ b/static/template/customer/customer_manage.html
@@ -52,7 +52,7 @@
         <h1>搜索客户</h1>
     </div>
     <div class="row">
-        <form action="{% url 'customer:search_customer' %}" method="get">
+        <form action="{% url 'customer:customer_manage' %}" method="get">
             <label for="customer_id">客户编号</label>
             <input type="text" class="form-control" name="customer_id"
                 placeholder="客户编号">
