--- a/static/template/customer/customer_manage.html
+++ b/static/template/customer/customer_manage.html
@@ -53,30 +53,54 @@
     </div>
     <div class="row">
         <form action="{% url 'customer:customer_manage' %}" method="get">
-            <label for="customer_id">客户编号</label>
-            <input type="text" class="form-control" name="customer_id"
-                placeholder="客户编号">
-            <label for="customer_name">客户名称</label>
-            <input type="text" class="form-control" name="customer_name"
-                placeholder="客户名称">
-            <label for="customer_phone">客户电话</label>
-            <input type="text" class="form-control" name="customer_phone"
-                placeholder="客户电话">
-                
-            <label for="customer_email">客户邮箱</label>
-            <input type="text" class="form-control" name="customer_email"
-                placeholder="客户邮箱">
-            <label for="customer_address">客户地址</label>
-            <input type="text" class="form-control" name="customer_address"
-                placeholder="客户地址">
-            <label for="remark">客户备注</label>
-            <input type="text" class="form-control" name="remark"
-                placeholder="客户备注">
-            <div class="col-12">
-                <input type="submit" class="btn btn-primary w-100"
-                    value="提交">
+            <div class="row">
+                <div class="col">
+                    <label for="customer_id">客户编号</label>
+                    <input type="text" class="form-control" name="customer_id"
+                        placeholder="客户编号">
+                </div>
+                <div class="col">
+                    <label for="customer_name">客户名称</label>
+                    <input type="text" class="form-control" name="customer_name"
+                        placeholder="客户名称">
+                </div>
+                <div class="col">
+                    <label for="customer_phone">客户电话</label>
+                    <input type="text" class="form-control"
+                        name="customer_phone"
+                        placeholder="客户电话">
+                </div>
             </div>
 
+            <div class="row">
+                <div class="col">
+
+                    <label for="customer_email">客户邮箱</label>
+                    <input type="text" class="form-control"
+                        name="customer_email"
+                        placeholder="客户邮箱">
+                </div>
+                <div class="col">
+                    <label for="customer_address">客户地址</label>
+                    <input type="text" class="form-control"
+                        name="customer_address"
+                        placeholder="客户地址">
+                </div>
+                <div class="col">
+                    <label for="remark">客户备注</label>
+                    <input type="text" class="form-control" name="remark"
+                        placeholder="客户备注">
+                </div>
+            </div>
+
+            <p>
+                  <div class="col-12">
+                <input type="submit" class="btn btn-primary w-100"
+                    value="搜索">
+            </div>
+
+            </p>
+          
         </form>
     </div>
 
