--- a/static/template/login.html
+++ b/static/template/login.html
@@ -57,7 +57,7 @@
                 <!-- 登录表单所在列 -->
                 <div class="col-md-6 offset-md-3 login-container">
                     <!-- 登录表单 -->
-                    <form action="{% url 'main:login_view' %}" method="post">
+                    <form action="{% url 'main:login' %}" method="post">
                         {% csrf_token %}
                         <!-- 账号输入框 -->
                         <div class="mb-3">
