header:新增了用户名显示 style:新增了根据权限显示spu列表

--- a/static/template/header.html
+++ b/static/template/header.html
@@ -78,7 +78,7 @@
         </ul>
 
       
-
+        你好,{{user.username}}
         <a class="btn btn-outline-primary ms-5" href="{%url 'main:logout_view'%}">退出登录</a>
 
     </div>
