--- a/static/template/register.html
+++ b/static/template/register.html
@@ -68,7 +68,7 @@
         {% if msg %}
         <p class="mt-3 text-center text-danger">{{ msg }}</p>
         {% endif %}
-        <a href="{% url 'main:login_view' %}" class="btn btn-secondary">返回</a>
+        <a href="{% url 'main:login' %}" class="btn btn-secondary">返回</a>
     </div>
     <!-- 引入 Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
